# micrograd-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: bindings.cpp  engine.hpp  main.cpp
